# 8-Puzzle

./: CMakeLists.txt  CMakePresets.json  GameFieldConstants.h  PuzzleGame.cpp  PuzzleGame.h  PuzzleState.cpp  PuzzleState.h  README.md  Resourses.h  main.cpp
Buttons/: BFSButton.cpp  BFSButton.h  Button.cpp  Button.h  LDFSButton.cpp  LDFSButton.h  RandomizeButton.cpp  RandomizeButton.h  SetBoardButton.cpp  SetBoardButton.h  Tile.cpp  Tile.h
